--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,8 @@ footer {
     /* containers */
 
     .container {
-        margin-top: 102px;
+        /* margin-top: 102px; 102 - 56 = 46 */
+        margin-top: 46px;
     }
 
     .container--cards {
