--- a/styles.css
+++ b/styles.css
@@ -109,12 +109,18 @@ h2 {
     max-width: 315px;
 }
 
+.container--middle-cards {
+    display: flex;
+    gap: 16px;
+}
+
 /* |||| CARDS |||| */
 .card {
     border-radius: 8px;
     background-color: var(--white);
     box-shadow: 0px 15px 30px -20px var(--grey-400);
-    margin: 16px 0;
+    /* margin: 16px 0; */
+    margin: 0 0 16px;
 }
 
 hr {
@@ -204,6 +210,10 @@ footer {
     .container {
         /* margin-top: 102px; 102 - 56 = 46 */
         margin-top: 46px;
+    }
+
+    .container--title {
+        margin-bottom: 74px;
     }
 
     .container--cards {
