--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ h1 {
     font-weight: var(--weight-heavy);
     letter-spacing: 0.0104em;
     line-height: var(--line-h-title);
+    margin-bottom: 0.666em;
     margin-block-end: 0.666em;
 }
 
@@ -133,7 +134,8 @@ h2 {
 .card {
     border-radius: 8px;
     background-color: var(--white);
-    box-shadow: 0 1em 2em -1.333em var(--blue);
+    /* box-shadow: 0 1em 2em -1.333em var(--blue); */
+    box-shadow: 0 0.5em 2em -1em rgba(0, 0, 255, 0.3);
     margin-block-end: 1.067em;
 }
 
@@ -199,6 +201,15 @@ footer {
 /* DESKTOP */
 
 @media screen and (min-width: 74.267em) {
+
+    /* text */
+
+    h1 {
+        /* margin-bottom: 0.666em; */
+        /* margin-block-end: 0.666em; */
+        margin-bottom: 0.566em;
+        margin-block-end: 0.566em;
+    }
     
     /* containers */
 
