--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,8 @@ hr {
 
 .card img {
     align-self: end;
-    margin: 2.133em 0 3.4em;
+    /* margin: 2.133em 0 3.4em; */
+    margin: 2.133em 0 3.1em;
 }
 
 /* |||| FOOTER |||| */
